aws serverless lambda configuration done
